feat: 优化了一些数据同步相关的东西，让我们的修改可以直观的体现在页面上
